<resources>
    <string name="app_name">Abox智能家居</string>

    <!--信息显示页字符串资源-->
    <string name="btn_tem_hum">温度: %1$s\n\n湿度: %2$s</string>
    <string name="btn_socket">插座</string>
    <string name="btn_human">人体活动</string>
    <string name="btn_light">光照强度</string>
    <string name="about">关于</string>
    <string name="about_info">\n大连海洋大学 – 电子21–1班 – 吕柏儒</string>

    <!--登录页字符串资源-->
    <string name="login_welcome">欢迎登录</string>
    <string name="login_account">请输入账号</string>
    <string name="login_pw">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_signup">注册</string>
    <string name="login_protocol1">同意</string>
    <string name="login_protocol2">用户协议</string>

    <!--注册页字符串资源-->
    <string name="signup_title">注册账号</string>
    <string name="signup_account">设置账号名（由字母数字组成）</string>
    <string name="signup_pw">设置密码</string>
    <string name="signup_repw">重新输入密码以确认</string>
    <string name="signup_signup">注册</string>
    <string name="signup_back">返回</string>

    <!--温湿度图表页字符串-->
    <string name="thchart_temp">温度历史数据</string>
    <string name="thchart_hum">湿度历史数据</string>
    <string name="thchart_clear">清空历史数据</string>

    <!--人体活动和光感数据列表页字符串-->
    <string name="hllist_title">人体活动和光线强度记录</string>
</resources>
