<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5689E5"
    tools:context=".Activity_login">

    <TextView
        android:id="@+id/tV1_Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/eT1_ID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="testaccount"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:backgroundTint="@color/white"
        android:background="@drawable/ev_style"
        android:textColorHint="#A0FFFFFF"
        android:hint="@string/login_account"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV1_Hello"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/eT1_PW"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="123456"
        android:background="@drawable/ev_style"
        android:backgroundTint="@color/white"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:textColorHint="#A0FFFFFF"
        android:hint="@string/login_pw"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT1_ID"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/bt1_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:background="@drawable/btn_click_style"
        android:backgroundTint="#0029AB"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT1_PW"
        app:layout_constraintVertical_bias="0.0" />

    <!--账号或密码错误提示-->
    <Button
        android:id="@+id/bt1_signup"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:background="@drawable/btn_click_style"
        android:backgroundTint="#0029AB"
        android:onClick="signup"
        android:text="@string/login_signup"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT1_PW"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tV1_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#F2C55C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT1_PW"
        app:layout_constraintVertical_bias="0.028" />

    <CheckBox
        android:id="@+id/cB1_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_protocol1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bt1_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tV1_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="26dp"
        android:onClick="protocol"
        android:text="@string/login_protocol2"
        android:textAlignment="center"
        android:textColor="#0029AB"
        app:layout_constraintBottom_toTopOf="@+id/bt1_login"
        app:layout_constraintStart_toEndOf="@+id/cB1_pro" />

</android.support.constraint.ConstraintLayout>