<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_tem_hum"
        android:layout_width="180dp"
        android:layout_height="105dp"
        android:background="@drawable/btn_click_style"
        android:drawableEnd="@drawable/ic_btn_tem_hum"
        android:gravity="center_vertical"
        android:onClick="btn_tem_hum"
        android:text="@string/btn_tem_hum"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btn_socket"
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:background="@drawable/btn_click_style"
        android:drawableTop="@drawable/ic_btn_socket_off"
        android:onClick="btn_socket"
        android:text="@string/btn_socket"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/btn_tem_hum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btn_human"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:background="@drawable/btn_click_style"
        android:drawableTop="@drawable/ic_btn_human_n"
        android:text="@string/btn_human"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="btn_human"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tem_hum"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/btn_light"
        android:layout_width="200dp"
        android:layout_height="105dp"
        android:background="@drawable/btn_click_style"
        android:drawableBottom="@drawable/ic_btn_light_4"
        android:text="@string/btn_light"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="btn_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/btn_human"
        app:layout_constraintTop_toBottomOf="@+id/btn_socket"
        app:layout_constraintVertical_bias="0.124" />

</android.support.constraint.ConstraintLayout>